@@ -2,18 +2,26 @@ package mchorse.bbs_mod.entity;
 
 import mchorse.bbs_mod.forms.entities.MCEntity;
 import mchorse.bbs_mod.forms.forms.Form;
-import mchorse.bbs_mod.forms.forms.ModelForm;
+import mchorse.bbs_mod.network.ServerNetwork;
+import net.minecraft.entity.Entity;
 import net.minecraft.entity.EntityType;
 import net.minecraft.entity.EquipmentSlot;
+import net.minecraft.entity.ItemEntity;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.attribute.DefaultAttributeContainer;
 import net.minecraft.entity.attribute.EntityAttributes;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NbtCompound;
+import net.minecraft.network.packet.s2c.play.ItemPickupAnimationS2CPacket;
+import net.minecraft.server.network.ServerPlayerEntity;
+import net.minecraft.server.world.ServerWorld;
 import net.minecraft.util.Arm;
+import net.minecraft.util.math.Box;
 import net.minecraft.world.World;
 
-import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 public class ActorEntity extends LivingEntity
 {
@@ -30,14 +38,11 @@ public class ActorEntity extends LivingEntity
     private MCEntity entity = new MCEntity(this);
     private Form form;
 
+    private Map<EquipmentSlot, ItemStack> equipment = new HashMap<>();
+
     public ActorEntity(EntityType<? extends LivingEntity> entityType, World world)
     {
         super(entityType, world);
-
-        ModelForm model = new ModelForm();
-
-        model.model.set("player/steve");
-        this.form = model;
     }
 
     public MCEntity getEntity()
@@ -50,21 +55,34 @@ public class ActorEntity extends LivingEntity
         return this.form;
     }
 
+    public void setForm(Form form)
+    {
+        this.form = form;
+    }
+
+    @Override
+    public Iterable<ItemStack> getHandItems()
+    {
+        return List.of(this.getEquippedStack(EquipmentSlot.MAINHAND), this.getEquippedStack(EquipmentSlot.OFFHAND));
+    }
+
     @Override
     public Iterable<ItemStack> getArmorItems()
     {
-        return Collections.emptyList();
+        return List.of(this.getEquippedStack(EquipmentSlot.FEET), this.getEquippedStack(EquipmentSlot.LEGS), this.getEquippedStack(EquipmentSlot.CHEST), this.getEquippedStack(EquipmentSlot.HEAD));
     }
 
     @Override
     public ItemStack getEquippedStack(EquipmentSlot slot)
     {
-        return ItemStack.EMPTY;
+        return this.equipment.getOrDefault(slot, ItemStack.EMPTY);
     }
 
     @Override
     public void equipStack(EquipmentSlot slot, ItemStack stack)
-    {}
+    {
+        this.equipment.put(slot, stack == null ? ItemStack.EMPTY : stack);
+    }
 
     @Override
     public Arm getMainArm()
@@ -77,9 +95,34 @@ public class ActorEntity extends LivingEntity
     {
         super.tick();
 
+        this.tickHandSwing();
+
+        if (this.getWorld().isClient)
+        {
+            return;
+        }
+
         if (this.form != null)
         {
             this.form.update(this.entity);
+        }
+
+        Box box = this.getBoundingBox().expand(1D, 0.5D, 1D);
+        List<Entity> list = this.getWorld().getOtherEntities(this, box);
+
+        for (Entity entity : list)
+        {
+            if (entity instanceof ItemEntity itemEntity)
+            {
+                ItemStack itemStack = itemEntity.getStack();
+                int i = itemStack.getCount();
+
+                if (!entity.isRemoved() && !itemEntity.cannotPickup())
+                {
+                    ((ServerWorld) this.getWorld()).getChunkManager().sendToOtherNearbyPlayers(entity, new ItemPickupAnimationS2CPacket(entity.getId(), this.getId(), i));
+                    entity.discard();
+                }
+            }
         }
     }
 
@@ -92,6 +135,20 @@ public class ActorEntity extends LivingEntity
         {
             this.discard();
         }
+    }
+
+    @Override
+    public void onStartedTrackingBy(ServerPlayerEntity player)
+    {
+        super.onStartedTrackingBy(player);
+
+        ServerNetwork.sendActorForm(player, this);
+    }
+
+    @Override
+    public void onStoppedTrackingBy(ServerPlayerEntity player)
+    {
+        super.onStoppedTrackingBy(player);
     }
 
     @Override
